welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:43: error: not found: value n
    	setCouleurBrosse(T(c+n+1))
                             ^